# Garmin_SyncAdge

./: README.md  client_flwr.py
Bagging and Cyclic/: README.md  client_0_log.txt  client_3_log.txt  client_app.py  pyproject.toml  run_all.py  server_app.py  submission.py
Bagging and Cyclic/clients_data/: client_1.csv  client_3.csv  client_4.csv
Bagging and Cyclic/dtbagging/: task.py
Neural Network/: README.md  global_model.npz  requirements.txt  run_clients.py  run_groups.py  submission.py  test.py
Neural Network/data/: load_data.py
Neural Network/dataset/: dataset_user_0_train.csv  dataset_user_10_train.csv  dataset_user_10_train_processed.csv  dataset_user_11_train.csv  dataset_user_11_train_processed.csv  dataset_user_12_train.csv  dataset_user_12_train_processed.csv  dataset_user_13_train.csv  dataset_user_13_train_processed.csv  dataset_user_14_train.csv  dataset_user_14_train_processed.csv  dataset_user_15_train.csv  dataset_user_15_train_processed.csv  dataset_user_16_train.csv  dataset_user_16_train_processed.csv  dataset_user_17_train.csv  dataset_user_17_train_processed.csv  dataset_user_18_train.csv  dataset_user_19_train.csv  dataset_user_19_train_processed.csv  dataset_user_1_train.csv  dataset_user_1_train_processed.csv  dataset_user_20_train.csv  dataset_user_20_train_processed.csv  dataset_user_21_train.csv  dataset_user_21_train_processed.csv  (+61 more)
Preprocessing/: preprocess_once.py  test_preprocess.py
Test data/: x_test.csv  x_test_processed.csv
dtbagging/: README.md  client_1_log.txt  client_2_log.txt  final_model.json  logreg_model.pkl
(+10 files in other folders)
